objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>AAkPay__Campaign_Contact_Key__c</fullName>
        <formula>CASESAFEID(CampaignId ) &amp;&quot;:&quot;&amp;   CASESAFEID(ContactId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Contact Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Create_URL_Token__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this to create a URL Token.  URL Tokens are useful when requesting payments using a public facing web link.
Activate/Use workflow rules to set this automatically.</inlineHelpText>
        <label>Create URL Token</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AAkPay__No_of_Booked_Tickets__c</fullName>
        <inlineHelpText>If the Campaign Member status is the same as the Campaign Type --&gt; Payment Type Campaign Member Paid status then this is a firmed booking and this field will equal the number of tickets.</inlineHelpText>
        <label>No. of Booked Tickets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AAkPay__No_of_Tickets__c</fullName>
        <inlineHelpText>Number of booked tickets</inlineHelpText>
        <label>No. of Tickets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AAkPay__Payment_Txn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Most recent Payment Transaction that this Campaign Member is associated with.  Should someone make two payments then only the last is shown.</inlineHelpText>
        <label>Payment Txn</label>
        <referenceTo>AAkPay__Payment_Txn__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AAkPay__Print_Email_Receipt__c</fullName>
        <inlineHelpText>Assigned during Statement Generation.  Used as an email address to send statements to.</inlineHelpText>
        <label>Print Email Receipt</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AAkPay__URL_Token__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>URL Token</label>
        <referenceTo>AAkPay__URL_Tokens__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>